--- a/css/reset.css
+++ b/css/reset.css
@@ -1,40 +1,53 @@
+/* line 1, ../sass/reset.scss */
 html, body, div, span, applet, object, iframe, p, blockquote,
 a, abbr, acronym, big, cite, code,
 del, dfn, font, img, ins, kbd, q, s, samp,
 small, strike, sub, sup, tt, var,
 dl, dt, dd,
 fieldset, form, label, legend {
-	margin: 0;
-	padding: 0;
-	outline: 0;
-	font-weight: 100;
-	font-style: inherit;
-	font-size: 100%;
-	font-family: inherit;
-	vertical-align: baseline;
+  margin: 0;
+  padding: 0;
+  outline: 0;
+  font-weight: 100;
+  font-style: inherit;
+  font-size: 100%;
+  font-family: inherit;
+  vertical-align: baseline;
 }
+
 /* remember to define focus styles! */
+/* line 17, ../sass/reset.scss */
 :focus {
-	outline: 0;
+  outline: 0;
 }
+
+/* line 20, ../sass/reset.scss */
 body {
-	line-height: 1;
-	color: black;
-	background: white;
+  line-height: 1;
+  color: black;
+  background: white;
 }
+
 /* tables still need 'cellspacing="0"' in the markup */
+/* line 26, ../sass/reset.scss */
 table {
-	border-collapse: collapse;
-	/*border-spacing: 0;*/
+  border-collapse: collapse;
+  /*border-spacing: 0;*/
 }
+
+/* line 30, ../sass/reset.scss */
 caption, th, td {
-	text-align: left;
-	font-weight: normal;
+  text-align: left;
+  font-weight: normal;
 }
+
+/* line 34, ../sass/reset.scss */
 blockquote:before, blockquote:after,
 q:before, q:after {
-	content: "";
+  content: "";
 }
+
+/* line 38, ../sass/reset.scss */
 blockquote, q {
-	quotes: "" "";
+  quotes: "" "";
 }
