--- a/css/superfish.css
+++ b/css/superfish.css
@@ -1,136 +1,203 @@
-
 /*** ESSENTIAL STYLES ***/
+/* line 3, ../sass/superfish.scss */
 .sf-menu, .sf-menu * {
-	margin:			0;
-	padding:		0;
-	list-style:		none;
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
+
+/* line 8, ../sass/superfish.scss */
 .sf-menu {
-	line-height:	1.0;
+  line-height: 1.0;
 }
+
+/* line 11, ../sass/superfish.scss */
 .sf-menu ul {
-	position:		absolute;
-	top:			-999em;
-	width:			10em; /* left offset of submenus need to match (see below) */
+  position: absolute;
+  top: -999em;
+  width: 10em;
+  /* left offset of submenus need to match (see below) */
 }
+
+/* line 16, ../sass/superfish.scss */
 .sf-menu ul li {
-	width:			100%;
+  width: 100%;
 }
+
+/* line 19, ../sass/superfish.scss */
 .sf-menu li:hover {
-	visibility:		inherit; /* fixes IE7 'sticky bug' */
+  visibility: inherit;
+  /* fixes IE7 'sticky bug' */
 }
+
+/* line 22, ../sass/superfish.scss */
 .sf-menu li {
-	float:			left;
-	position:		relative;
+  float: left;
+  position: relative;
 }
+
+/* line 26, ../sass/superfish.scss */
 .sf-menu a {
-	display:		block;
-	position:		relative;
+  display: block;
+  position: relative;
 }
+
+/* line 30, ../sass/superfish.scss */
 .sf-menu li:hover ul,
 .sf-menu li.sfHover ul {
-	left:			0;
-	top:			2.5em; /* match top ul list item height */
-	z-index:		99;
+  left: 0;
+  top: 2.5em;
+  /* match top ul list item height */
+  z-index: 99;
 }
+
+/* line 36, ../sass/superfish.scss */
 ul.sf-menu li:hover li ul,
 ul.sf-menu li.sfHover li ul {
-	top:			-999em;
+  top: -999em;
 }
+
+/* line 40, ../sass/superfish.scss */
 ul.sf-menu li li:hover ul,
 ul.sf-menu li li.sfHover ul {
-	left:			10em; /* match ul width */
-	top:			0;
+  left: 10em;
+  /* match ul width */
+  top: 0;
 }
+
+/* line 45, ../sass/superfish.scss */
 ul.sf-menu li li:hover li ul,
 ul.sf-menu li li.sfHover li ul {
-	top:			-999em;
+  top: -999em;
 }
+
+/* line 49, ../sass/superfish.scss */
 ul.sf-menu li li li:hover ul,
 ul.sf-menu li li li.sfHover ul {
-	left:			10em; /* match ul width */
-	top:			0;
+  left: 10em;
+  /* match ul width */
+  top: 0;
 }
 
 /*** DEMO SKIN ***/
+/* line 56, ../sass/superfish.scss */
 .sf-menu {
-	float:			left;
-	margin-bottom:	1em;
+  float: left;
+  margin-bottom: 1em;
 }
+
+/* line 60, ../sass/superfish.scss */
 .sf-menu a {
-	border-left:	1px solid #fff;
-	border-top:		1px solid #99999;
-	padding: 		.75em 1em;
-	text-decoration:none;
+  border-left: 1px solid #fff;
+  border-top: 1px solid #99999;
+  padding: .75em 1em;
+  text-decoration: none;
 }
-.sf-menu a, .sf-menu a:visited  { /* visited pseudo selector so IE6 applies text colour*/
-	color:			#13a;
+
+/* line 66, ../sass/superfish.scss */
+.sf-menu a, .sf-menu a:visited {
+  /* visited pseudo selector so IE6 applies text colour*/
+  color: #13a;
 }
+
+/* line 69, ../sass/superfish.scss */
 .sf-menu li {
-	background:		#BDD2FF;
+  background: #BDD2FF;
 }
+
+/* line 72, ../sass/superfish.scss */
 .sf-menu li li {
-	background:		#AABDE6;
+  background: #AABDE6;
 }
+
+/* line 75, ../sass/superfish.scss */
 .sf-menu li li li {
-	background:		#9AAEDB;
+  background: #9AAEDB;
 }
+
+/* line 78, ../sass/superfish.scss */
 .sf-menu li:hover, .sf-menu li.sfHover,
 .sf-menu a:focus, .sf-menu a:hover, .sf-menu a:active {
-	background:		#CFDEFF;
-	outline:		0;
+  background: #CFDEFF;
+  outline: 0;
 }
 
 /*** arrows **/
+/* line 85, ../sass/superfish.scss */
 .sf-menu a.sf-with-ul {
-	padding-right: 	2.25em;
-	min-width:		1px; /* trigger IE7 hasLayout so spans position accurately */
+  padding-right: 2.25em;
+  min-width: 1px;
+  /* trigger IE7 hasLayout so spans position accurately */
 }
+
+/* line 89, ../sass/superfish.scss */
 .sf-sub-indicator {
-	position:		absolute;
-	display:		block;
-	right:			.75em;
-	top:			1.05em; /* IE6 only */
-	width:			10px;
-	height:			10px;
-	text-indent: 	-999em;
-	overflow:		hidden;
-	background:		url('../images/arrows-ffffff.png') no-repeat -10px -100px; /* 8-bit indexed alpha png. IE6 gets solid image only */
+  position: absolute;
+  display: block;
+  right: .75em;
+  top: 1.05em;
+  /* IE6 only */
+  width: 10px;
+  height: 10px;
+  text-indent: -999em;
+  overflow: hidden;
+  background: url("../images/arrows-ffffff.png") no-repeat -10px -100px;
+  /* 8-bit indexed alpha png. IE6 gets solid image only */
 }
-a > .sf-sub-indicator {  /* give all except IE6 the correct values */
-	top:			.8em;
-	background-position: 0 -100px; /* use translucent arrow for modern browsers*/
+
+/* line 100, ../sass/superfish.scss */
+a > .sf-sub-indicator {
+  /* give all except IE6 the correct values */
+  top: .8em;
+  background-position: 0 -100px;
+  /* use translucent arrow for modern browsers*/
 }
+
 /* apply hovers to modern browsers */
+/* line 105, ../sass/superfish.scss */
 a:focus > .sf-sub-indicator,
 a:hover > .sf-sub-indicator,
 a:active > .sf-sub-indicator,
 li:hover > a > .sf-sub-indicator,
 li.sfHover > a > .sf-sub-indicator {
-	background-position: -10px -100px; /* arrow hovers for modern browsers*/
+  background-position: -10px -100px;
+  /* arrow hovers for modern browsers*/
 }
 
 /* point right for anchors in subs */
-.sf-menu ul .sf-sub-indicator { background-position:  -10px 0; }
-.sf-menu ul a > .sf-sub-indicator { background-position:  0 0; }
+/* line 114, ../sass/superfish.scss */
+.sf-menu ul .sf-sub-indicator {
+  background-position: -10px 0;
+}
+
+/* line 115, ../sass/superfish.scss */
+.sf-menu ul a > .sf-sub-indicator {
+  background-position: 0 0;
+}
+
 /* apply hovers to modern browsers */
+/* line 117, ../sass/superfish.scss */
 .sf-menu ul a:focus > .sf-sub-indicator,
 .sf-menu ul a:hover > .sf-sub-indicator,
 .sf-menu ul a:active > .sf-sub-indicator,
 .sf-menu ul li:hover > a > .sf-sub-indicator,
 .sf-menu ul li.sfHover > a > .sf-sub-indicator {
-	background-position: -10px 0; /* arrow hovers for modern browsers*/
+  background-position: -10px 0;
+  /* arrow hovers for modern browsers*/
 }
 
 /*** shadows for all but IE6 ***/
+/* line 126, ../sass/superfish.scss */
 .sf-shadow ul {
-	background:	url('../images/shadow.png') no-repeat bottom right;
-	padding: 0 8px 9px 0;
-	-moz-border-radius-bottomleft: 17px;
-	-moz-border-radius-topright: 17px;
-	-webkit-border-top-right-radius: 17px;
-	-webkit-border-bottom-left-radius: 17px;
+  background: url("../images/shadow.png") no-repeat bottom right;
+  padding: 0 8px 9px 0;
+  -moz-border-radius-bottomleft: 17px;
+  -moz-border-radius-topright: 17px;
+  -webkit-border-top-right-radius: 17px;
+  -webkit-border-bottom-left-radius: 17px;
 }
+
+/* line 134, ../sass/superfish.scss */
 .sf-shadow ul.sf-shadow-off {
-	background: transparent;
+  background: transparent;
 }
