--- a/sass/jquery.fileupload.scss
+++ b/sass/jquery.fileupload.scss
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*
  * jQuery File Upload Plugin CSS 1.3.0
  * https://github.com/blueimp/jQuery-File-Upload
@@ -8,13 +9,11 @@
  * Licensed under the MIT license:
  * http://www.opensource.org/licenses/MIT
  */
-/* line 13, ../sass/jquery.fileupload.scss */
+
 .fileinput-button {
   position: relative;
   overflow: hidden;
 }
-
-/* line 17, ../sass/jquery.fileupload.scss */
 .fileinput-button input {
   position: absolute;
   top: 0;
@@ -29,7 +28,6 @@
 
 /* Fixes for IE < 8 */
 @media screen\9 {
-  /* line 31, ../sass/jquery.fileupload.scss */
   .fileinput-button input {
     filter: alpha(opacity=0);
     font-size: 100%;
